<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/iv_details_moviePoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/iv_details_content_description"
                android:scaleType="centerCrop" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_details_MovieTitle"
            style="@style/FancyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_details_Language"
                style="@style/Micro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                tools:text="@string/divider" />

            <TextView
                android:id="@+id/tv_details_releaseDate"
                style="@style/Micro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                tools:text="@string/divider" />

            <TextView
                android:id="@+id/tv_details_voteAverage"
                style="@style/Micro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_details_plot_heading"
            style="@style/DetailsPlotHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/plotAnalysis" />

        <TextView
            android:id="@+id/tv_details_plot"
            style="@style/BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>